view.html: fix comment text copypasting in Firefox
Firefox would insert a lot of weird whitespace, because its
user-select would default to "all" and not "text", so it copypastes
the whitespace of otherwise completely invisible HTML elements.

I don't know why Firefox does this. It's stupid, and not what the
user expects. They're copying what they see, not what the DOM is.

--- a/nyaa/static/css/main.css
+++ b/nyaa/static/css/main.css
@@ -293,6 +293,11 @@ a.text-purple:hover, a.text-purple:active, a.text-purple:focus {
 	margin-bottom: 10px;
 }
 
+/* workaround for Mozilla whitespace copypaste dumbfuckery */
+.comment-body {
+	-moz-user-select: text;
+}
+
 .comment-content {
 	overflow-wrap: break-word;
 }
